Fix node-env.js to make example 3 work * fix DOM-connector by adding a getter for tagName to cheerio objects * fix event delegation

--- a/examples/03_canvas_shadow_text/index.html
+++ b/examples/03_canvas_shadow_text/index.html
@@ -41,7 +41,7 @@
     
   </script>
 </head>
-<body>
+<body style="width:500px;height:500px;">
 <input type="button" id="start_button" value="Resume" disabled="disabled"/>
 <input type="button" id="stop_button" value="Pause"/>
 <input type="button" id="show_button" value="Show Patch"/>
